[package]
name = "cdn-lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde_json = "1.0"
minreq = { version = "2.11", features = ["https"] }
regex = "1.10"
ipnet = "2.9"
chrono = "0.4"
anyhow = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = 0
strip = "symbols"

[profile.release-with-symbols]
inherits = "release"
strip = false